syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

service GreeterMy {
  rpc SayHelloMy (HelloRequestMy) returns (HelloReplyMy);
}

service Users {
  rpc GetUsers (HelloRequestMy) returns (UserList);
}

service UsersStream {
  rpc GetUsers (HelloRequestMy) returns (stream UserList);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message HelloRequestMy {
  string name = 1;
  int32 count = 2;
}

message HelloReplyMy {
  string message1 = 1;
  string message2 = 2;
  int32 count = 3;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string gender = 4;
  string status = 5;
}
message UserList {
  repeated User users = 1;
}